update to footer and styling css

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <header>
     <nav>
         <ul> 
-            <li><a href="">Professional</a></li>
-            <li><a href="">Personal</a></li>
-            <li><a href="">My Work</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#professional">Professional</a></li>
+            <li><a href="#personal">Personal</a></li>
+            <li><a href="#work">My Work</a></li>
+            <li><a href="#contact">Contact Me</a></li>
         </ul>
     </nav>
   </header>
@@ -32,6 +32,7 @@
       <!-- proffesional -->
       <div class="hero-section" id="professional">
         <h2>professional</h2>
+        <p>I have ten years professional experience in a range of different areas. I am undertaking a 16 week front end developer bootcamp.</p>
       </div>      
       <!-- image -->
       <div class="hero-section" id="image">
@@ -40,11 +41,14 @@
       <!-- personal -->
       <div class="hero-section" id="personal">
         <h2>personal</h2>
+        <p>I love learning, cooking, designing, and using my creativity.<br />I am a very keen gardener <br /> And I am really enjoying learning how to code.</p>
       </div>
     </div>     
     <main class="page-wrapper">
-
+      
+      <div id="work">
         <h2>my work</h2>
+      </div>
 
         <!-- portfolio container -->
         <section class="page-section" id="work">
@@ -55,8 +59,13 @@
         </section>
     
         <!-- contact -->
-        <section class="page-section contact" id="contact">
+        <section class="page-section-contact" id="contact">
           <h2>contact me</h2>
+          <ul> 
+            <li><a href="mailto:lcbarham9@gmail.com?subject=Nice Portfolio">send email</a></li>
+            <li> 01234 567 890</li>
+          </ul>
+
         </section>
       </main>     
   </section>
