add media queries and work links to portfolio

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <!-- navigation -->
   <header>
     <nav>
-        <ul> 
-            <li><a href="#professional">Professional</a></li>
-            <li><a href="#personal">Personal</a></li>
-            <li><a href="#work">My Work</a></li>
-            <li><a href="#contact">Contact Me</a></li>
-        </ul>
+      <ul>
+        <li><a href="#professional">Professional</a></li>
+        <li><a href="#personal">Personal</a></li>
+        <li><a href="#work">My Work</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -27,52 +27,62 @@
     <div class="header-one">
       <h1>i am lydia barham</h1>
       <p>front end developer in training</p>
-    </div>    
+    </div>
     <div class="hero-grid">
       <!-- proffesional -->
       <div class="hero-section" id="professional">
         <h2>professional</h2>
-        <p>I have ten years professional experience in a range of different areas. I am undertaking a 16 week front end developer bootcamp.</p>
-      </div>      
+        <p>I have ten years professional experience in a range of different areas. I am undertaking a 16 week front end
+          developer bootcamp.</p>
+      </div>
       <!-- image -->
       <div class="hero-section" id="image">
-        <img src="../lydia-barham-portfolio/assets/images/image0.jpeg" alt="me sitting on the back of a boat eating an icecream" height="700px"/>
+        <img src="../lydia-barham-portfolio/assets/images/image0.jpeg"
+          alt="me sitting on the back of a boat eating an icecream" max-height="700px" />
       </div>
       <!-- personal -->
       <div class="hero-section" id="personal">
         <h2>personal</h2>
-        <p>I love learning, cooking, designing, and using my creativity.<br />I am a very keen gardener <br /> And I am really enjoying learning how to code.</p>
+        <p>I love learning, cooking, designing, and using my creativity.<br />I am a very keen gardener <br /> And I am
+          really enjoying learning how to code.</p>
       </div>
-    </div>     
+    </div>
     <main class="page-wrapper">
-      
-      <div id="work">
+      <div id="my-work">
         <h2>my work</h2>
       </div>
 
-        <!-- portfolio container -->
-        <section class="page-section" id="work">
-          <div class="grid-item" id="example-one"></div>
-          <div class="grid-item" id="example-two"></div>
-          <div class="grid-item" id="example-three"></div>
-          <div class="grid-item" id="example-four"></div>
-        </section>
-    
-        <!-- contact -->
-        <section class="page-section-contact" id="contact">
-          <h2>contact me</h2>
-          <ul> 
-            <li><a href="mailto:lcbarham9@gmail.com?subject=Nice Portfolio">send email</a></li>
-            <li> 01234 567 890</li>
-          </ul>
+      <!-- portfolio container -->
+      <section class="page-section" id="work">      
+        <a class="grid-item" id="example-one" href="https://lydiabarham.github.io/Horiseon-accessible-site/#search-engine-optimization" target="_blank"
+          rel="noopener noreferrer">
+          <div><h3>Horiseon</h3></div>
+        </a>
+        <a class="grid-item" id="example-two" href="" target="_blank" rel="noopener noreferrer">
+          <div><h3>Coming Soon</h3></div>
+        </a>
+        <a class="grid-item" id="example-three"href="" target="_blank" rel="noopener noreferrer">
+          <div><h3>Coming Soon</h3></div>
+        </a>
+        <a class="grid-item" id="example-four"href="" target="_blank" rel="noopener noreferrer">
+          <div><h3>Coming Soon</h3></div>
+        </a>
+      </section>
 
-        </section>
-      </main>     
+      <!-- contact -->
+      <section class="page-section-contact" id="contact">
+        <h2>contact me</h2>
+        <ul>
+          <li><a href="mailto:lcbarham9@gmail.com?subject=Nice Portfolio">send email</a></li>
+          <li> 01234 567 890</li>
+        </ul>
+
+      </section>
+    </main>
   </section>
 
   <footer>
     <p>thanks for stopping by!</p>
-    <button>hire me</button>
   </footer>
 
 </body>
